--- a/panel/modules/ModuloRoles/view/styles.css
+++ b/panel/modules/ModuloRoles/view/styles.css
@@ -92,8 +92,9 @@
 .container .content .user-data .datos .dato .text {
     width: 90%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     border-radius: 0 0 10px 10px;
     padding: 10px 20px;
     background-color: var(--color-icon);
@@ -103,7 +104,8 @@
     background-color: transparent;
     font-family: var(--fuente);
     font-size: 20px;
-    padding: 0 10px;
+    margin-top: 10px;
+    margin-right: 20px;
 }
 
 .container .content .user-data .buttons {
@@ -156,5 +158,6 @@
     padding: 0 20px;
     background-color: var(--correct);
     border-radius: 20px;
-    margin-right: 10px;
+    margin-right: 5px;
+    margin-top: 10px;
 }
